--- a/Copy to SD Card root directory to update/Language Packs/language_ca.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ca.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emulate M600
+label_emulated_m600:Emulated M600
 label_rotate_ui:Rotar
 label_language:Català
 label_ack_notification:ACK notification style
-label_file_sort_by:Sort files by
-label_file_list_mode:Mode de visualització de fitxers
-label_fan_speed_percent:Fan Speed As Percentage
+label_files_sort_by:Sort files by
+label_files_list_mode:Mode de visualització de fitxers
+label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Informació d'estat persistent
 label_terminal_ack:Mostra ACK a la terminal
 label_serial_always_on:Serial Always ON
-label_marlin_fullscreen:Mode Marlin a pantalla completa
+label_marlin_full_screen:Mode Marlin a pantalla completa
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Velocitat de moviment(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_xy_offset_probing:XY Offset Probing Support
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_on:Apag. aut.
 label_fil_runout:Sensor de filament
-label_pl_recovery_en:Recuperació de pèrdua d’energia
-label_pl_recovery_home:Power Loss Recovery Homing
+label_plr_on:Recuperació de pèrdua d’energia
+label_plr_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
