--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:模拟M600
+label_emulated_m600:模拟M600
 label_rotate_ui:旋转界面
 label_language:简体中文
 label_ack_notification:ACK 弹窗类型
-label_file_sort_by:Sort files by
-label_file_list_mode:文件浏览列表模式
-label_fan_speed_percent:百分比显示风扇速度
+label_files_sort_by:Sort files by
+label_files_list_mode:文件浏览列表模式
+label_fan_speed_percentage:百分比显示风扇速度
 label_persistent_info:顶部温度信息
 label_terminal_ack:在G-code终端中显示温度信息
 label_serial_always_on:串口常开
-label_marlin_fullscreen:全屏显示Marlin模式
+label_marlin_full_screen:全屏显示Marlin模式
 label_marlin_show_title:Marlin模式显示标题
 label_marlin_type:Marlin模式类型
 label_move_speed:移动速度(X Y Z)
 label_auto_load_leveling:自动保存/加载调平数据
-label_xy_offset_probing:XY Offset Probing Support
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z轴多电机自动对齐
 label_ps_on:自动关机
 label_fil_runout:耗材检测传感器
-label_pl_recovery_en:断电续打
-label_pl_recovery_home:断电续打前归零
+label_plr_on:断电续打
+label_plr_home:断电续打前归零
 label_btt_mini_ups:启用BTT UPS
 label_touch_sound:按钮声音
 label_toast_sound:Toast 提示声音
