--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emuliere M600
+label_emulated_m600:Emuliere M600
 label_rotate_ui:UI drehen
 label_language:Deutsch
 label_ack_notification:ACK - Stil
-label_file_sort_by:Sortiere Dateien nach
-label_file_list_mode:Dateien als Liste
-label_fan_speed_percent:Lüft. Geschw. in Prozent
+label_files_sort_by:Sortiere Dateien nach
+label_files_list_mode:Dateien als Liste
+label_fan_speed_percentage:Lüft. Geschw. in Prozent
 label_persistent_info:Persistente Status Info
 label_terminal_ack:Zeige ACK im Terminal
 label_serial_always_on:Seriell Verbind. immer an
-label_marlin_fullscreen:Marlin Vollbild
+label_marlin_full_screen:Marlin Vollbild
 label_marlin_show_title:Marlin Titel anz.
 label_marlin_type:Marlin Modus Typ
 label_move_speed:Geschwindigkeit (XYZ)
 label_auto_load_leveling:Auto Laden/Speichern Leveling
-label_xy_offset_probing:XY Offset Probing Untertützung
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z Stepper Auto-Justierung
 label_ps_on:Auto-aus (PS_ON)
 label_fil_runout:Filament Sensor
-label_pl_recovery_en:Weitermachen (Stromausfall)
-label_pl_recovery_home:Achsen nullen (Stromausfall)
+label_plr_on:Weitermachen (Stromausfall)
+label_plr_home:Achsen nullen (Stromausfall)
 label_btt_mini_ups:BTT UPS Unterstützung
 label_touch_sound:Eingabetöne
 label_toast_sound:Toasts-Töne
