--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emuler M600
+label_emulated_m600:Emuler M600
 label_rotate_ui:Rotation
 label_language:Français
 label_ack_notification:Style de notification ACK
-label_file_sort_by:Trier les fichiers par
-label_file_list_mode:Fichiers en mode liste
-label_fan_speed_percent:Vitesse ventilateur en %
+label_files_sort_by:Trier les fichiers par
+label_files_list_mode:Fichiers en mode liste
+label_fan_speed_percentage:Vitesse ventilateur en %
 label_persistent_info:Temp. toujours affichées
 label_terminal_ack:Afficher ACK sur Terminal
 label_serial_always_on:Serial toujours actif
-label_marlin_fullscreen:Mode Marlin plein écran
+label_marlin_full_screen:Mode Marlin plein écran
 label_marlin_show_title:Titre en Mode Marlin
 label_marlin_type:Type du Mode Marlin
 label_move_speed:Vitesse de déplacement (X Y Z)
 label_auto_load_leveling:Auto-Sauvegarde Leveling
-label_xy_offset_probing:Support XY Offset
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Auto-Alignement moteurs Z
 label_ps_on:Extinction automatique
 label_fil_runout:Capteur de filament
-label_pl_recovery_en:Reprise après coupure
-label_pl_recovery_home:Home avant reprise
+label_plr_on:Reprise après coupure
+label_plr_home:Home avant reprise
 label_btt_mini_ups:Support BTT UPS
 label_touch_sound:Son des touches
 label_toast_sound:Notifications
