--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emulált M600
+label_emulated_m600:Emulált M600
 label_rotate_ui:Forgatás
 label_language:Magyar
 label_ack_notification:ACK Értesítési stílus
-label_file_sort_by:Fájlok rendezése
-label_file_list_mode:Fájlnéző listamód
-label_fan_speed_percent:Ventilátor sebesség %-ban
+label_files_sort_by:Fájlok rendezése
+label_files_list_mode:Fájlnéző listamód
+label_fan_speed_percentage:Ventilátor sebesség %-ban
 label_persistent_info:Állandó állapotinfó
 label_terminal_ack:ACK Megjelenítése
 label_serial_always_on:Soros port folytonos
-label_marlin_fullscreen:Nagyképernyős Marlin mód
+label_marlin_full_screen:Nagyképernyős Marlin mód
 label_marlin_show_title:Marlin mód cím támogatás
 label_marlin_type:Marlin mód típusa
 label_move_speed:Mozgás seb. (X-Y-Z)
 label_auto_load_leveling:Szint. auto-mentés/töltés
-label_xy_offset_probing:X-Y Végpont tapintás tám.
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z Motorok automata igazí.
 label_ps_on:Automata kikapcsolás
 label_fil_runout:Szál érzékelő
-label_pl_recovery_en:Energiavesztés helyreáll.
-label_pl_recovery_home:Áramkimaradás helyreáll.
+label_plr_on:Energiavesztés helyreáll.
+label_plr_home:Áramkimaradás helyreáll.
 label_btt_mini_ups:BTT UPS Támogatás
 label_touch_sound:Érintés hang
 label_toast_sound:Értesítés hang
