--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emula M600
+label_emulated_m600:M600 emulato
 label_rotate_ui:Ruota
 label_language:Italiano
 label_ack_notification:Tipo di popup
-label_file_sort_by:Ordina file per
-label_file_list_mode:File in modalità lista
-label_fan_speed_percent:Ventola in percentuale
+label_files_sort_by:Ordina file per
+label_files_list_mode:File in modalità lista
+label_fan_speed_percentage:Ventola in percentuale
 label_persistent_info:Mostra barra di stato
 label_terminal_ack:Mostra ACK in console
 label_serial_always_on:Seriale sempre accesa
-label_marlin_fullscreen:Marlin a schermo intero
+label_marlin_full_screen:Marlin a schermo intero
 label_marlin_show_title:Mostra titolo in Marlin
 label_marlin_type:Modalità Marlin
 label_move_speed:Vel. movimenti(X Y Z)
 label_auto_load_leveling:Auto salva/carica liv.
-label_xy_offset_probing:Supp. probing offset XY
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Auto allineamento asse Z
 label_ps_on:Auto spegnimento
 label_fil_runout:Sensore filamento
-label_pl_recovery_en:Power loss recovery
-label_pl_recovery_home:Power loss rec. homing
+label_plr_on:Power loss recovery
+label_plr_home:Power loss rec. homing
 label_btt_mini_ups:Supporto a BTT UPS
 label_touch_sound:Suono al tocco
 label_toast_sound:Notifiche toast
