--- a/Copy to SD Card root directory to update/Language Packs/language_pl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pl.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emulate M600
+label_emulated_m600:Emulated M600
 label_rotate_ui:Obrót
 label_language:Polski
 label_ack_notification:ACK notification style
-label_file_sort_by:Sort files by
-label_file_list_mode:Files viewer List Mode
-label_fan_speed_percent:Fan Speed As Percentage
+label_files_sort_by:Sort files by
+label_files_list_mode:Files viewer List Mode
+label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:Persistent Status Info
 label_terminal_ack:Show ACK in Terminal
 label_serial_always_on:Serial Always ON
-label_marlin_fullscreen:Marlin mode in fullscreen
+label_marlin_full_screen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Move speed(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_xy_offset_probing:XY Offset Probing Support
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_on:Auto Power
 label_fil_runout:Filament sensor
-label_pl_recovery_en:Power loss recovery
-label_pl_recovery_home:Power Loss Recovery Homing
+label_plr_on:Power loss recovery
+label_plr_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
