--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Эмуляция M600
+label_emulated_m600:Эмуляция M600
 label_rotate_ui:Переворот
 label_language:Русский
 label_ack_notification:ACK стиль уведомления
-label_file_sort_by:Сортировать по
-label_file_list_mode:Файлы в режиме строк
-label_fan_speed_percent:Скорость вентилятора в процентах
+label_files_sort_by:Сортировать по
+label_files_list_mode:Файлы в режиме строк
+label_fan_speed_percentage:Скорость вентилятора в процентах
 label_persistent_info:Нагрев в инфостроке
 label_terminal_ack:ACK терминала (C°)
 label_serial_always_on:Серийный порт Всегда ВКЛЮЧЕН
-label_marlin_fullscreen:Marlin на весь экран
+label_marlin_full_screen:Marlin на весь экран
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin тип режима
 label_move_speed:Скорость (X Y Z)
 label_auto_load_leveling:Автоматическая Загрузка Сетки
-label_xy_offset_probing:XY Офсет Датчика
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z Автоматическое выравнивание
 label_ps_on:Автовыключение
 label_fil_runout:Сенсор прутка
-label_pl_recovery_en:Работа после потери питания
-label_pl_recovery_home:Работа после потери питания с парковкой
+label_plr_on:Работа после потери питания
+label_plr_home:Работа после потери питания с парковкой
 label_btt_mini_ups:Поддержка BTT UPS 
 label_touch_sound:Звуки нажатий
 label_toast_sound:Звуки инфостроки
