--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -3,27 +3,27 @@
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_emulate_m600:Emulate M600
+label_emulated_m600:Emulated M600
 label_rotate_ui:顯示方向
 label_language:正體中文
 label_ack_notification:ACK 弹窗类型
-label_file_sort_by:Sort files by
-label_file_list_mode:文件預覽列表模式
-label_fan_speed_percent:Fan Speed As Percentage
+label_files_sort_by:Sort files by
+label_files_list_mode:文件預覽列表模式
+label_fan_speed_percentage:Fan Speed As Percentage
 label_persistent_info:頂部溫度訊息
 label_terminal_ack:在G-code終端顯示溫度
 label_serial_always_on:Serial Always ON
-label_marlin_fullscreen:全螢幕Marlin模式
+label_marlin_full_screen:全螢幕Marlin模式
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_xy_offset_probing:XY Offset Probing Support
+label_probing_after_homing:Probing after homing
 label_z_steppers_alignment:Z Steppers Auto-Alignment
 label_ps_on:自動關機
 label_fil_runout:耗材感應器
-label_pl_recovery_en:断电续打
-label_pl_recovery_home:Power Loss Recovery Homing
+label_plr_on:断电续打
+label_plr_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:按鈕聲音
 label_toast_sound:Toast 提示聲音
