--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -93,14 +93,14 @@
 #   Options: [OFF (port disabled): 0, 2400: 1, 9600: 2, 19200: 3, 38400: 4, 57600: 5, 115200: 6, 250000: 7, 500000: 8, 1000000: 9]
 serial_port:P1:6 P2:0 P3:0 P4:0
 
-#### Emulate M600
+#### Emulated M600
 # The TFT intercepts the M600 gcode (filament change) and emulates the handling logic
 # otherwise provided by Marlin firmware.
 #
 # NOTE: Enable it, in case Marlin firmware does not properly support M600 on the mainboard.
 #
 #   Options: [disable: 0, enable: 1]
-emulate_m600:1
+emulated_m600:1
 
 
 #--------------------------------------------------------------------
@@ -143,7 +143,7 @@ status_screen:1
 #             ORANGE: 8, PURPLE: 9, LIME: 10, BROWN: 11, DARKBLUE: 12, DARKGREEN: 13,    GRAY: 14, DARKGRAY: 15]
 
 ## Title background color
-title_back_color:1
+title_background_color:1
 
 ## Background color
 background_color:1
@@ -208,7 +208,7 @@ files_list_mode:1
 #### Fan Speed As Percentage
 # Show fan speed as percentage. If disabled fan speeed will be displayed as PWM values.
 #   Options: [disable: 0, enable: 1]
-fan_speed_percent:1
+fan_speed_percentage:1
 
 #### Persistent Temperature Info
 # Show persistent temperature info in all menus.
@@ -292,18 +292,18 @@ serial_always_on:0
 #             ORANGE: 8, PURPLE: 9, LIME: 10, BROWN: 11, DARKBLUE: 12, DARKGREEN: 13,    GRAY: 14, DARKGRAY: 15]
 
 ## Marlin Mode background color
-marlin_bg_color:1
+marlin_background_color:1
 
 ## Marlin Mode font color
-marlin_fn_color:8
+marlin_font_color:8
 
-#### Marlin Mode Fullscreen Support
+#### Marlin Mode Full Screen Support
 # Run Marlin Mode in fullscreen.
 #
 # NOTE: Disable is recommended for TFT24.
 #
 #   Options: [disable: 0, enable: 1]
-marlin_fullscreen:0
+marlin_full_screen:0
 
 #### Marlin Mode Title Support
 # Show banner text at the top of the TFT in Marlin Mode.
@@ -509,26 +509,28 @@ level_feedrate:XY6000 Z6000
 # Invert axis button function in Manual Leveling and Move menus in order it matches the actual axis movement.
 #
 # NOTE: The Y-axis of different printer (move hotbed or move nozzle) move in different directions.
-#       So Y-axis leveling invert can't follow up invert_axis[Y_AXIS].
-#       We separate a single variable "LY"(Leveling Y-axis) to deal with the y-axis leveling movement direction.
+#       So Y-axis leveling invertion can't follow up inverted_y-axiaxis[Y_AXIS].
+#       We separate a single variable "LY"(Leveling Y-axis) to deal with the Y-axis leveling movement direction.
 #
 #   Format: [X<option> Y<option> Z<option> LY<option>]
 #   Options: [disable: 0, enable: 1]
-invert_axis:X0 Y0 Z0 LY0
+inverted_axis:X0 Y0 Z0 LY0
 
 #### Probing After Homing (Probe Offset)
 # Used by the Probe Offset menu for the Z offset tuning process.
 # If enabled, after homing a probing in the center of the bed is performed and then the nozzle
 # is moved to the XY probing point.
-# If disabled, after homing the nozzle is moved directly to the XY honing point.
+# If disabled, after homing the nozzle is moved directly to the XY honing point. This is usefull
+# in case Marlin firmware is configured to use the probe for Z-axis homing (e.g.
+# USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware) to avoid a second probing after homing.
 #
 # NOTES:
 #   - Enable it in case Marlin firmware is not configured to use the probe for Z-axis homing
 #     (e.g. USE_PROBE_FOR_Z_HOMING disabled in Marlin firmware) or the XY probing point set
 #     for homing is not reacheable by the nozzle (e.g. due to HW limitations/constraints or
 #     printer specific configuration).
-#   - Disable it in case Marlin firmware is configured to use the probe for Z-axis homing (e.g.
-#     USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
+#   - Disable it (preferably) in case Marlin firmware is configured to use the probe for Z-axis
+#     homing (e.g. USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
 #
 #   Options: [disable: 0, enable: 1]
 probing_after_homing:1
@@ -598,7 +600,7 @@ ps_on:0
 #### Power Supply Active HIGH
 # Enable the logic of the mode on HIGH signal.
 #   Options: [disable: 0, enable: 1]
-ps_on_active_high:1
+ps_active_high:1
 
 #### Power Supply Auto Shutdown Temperature
 # Maximum hotend temperature for automatic shutdown after printing, if automatic shutdown is enabled.
@@ -607,7 +609,7 @@ ps_on_active_high:1
 # will wait for the hotend temperature to drop below this value before shutting down automatically.
 #   Unit: [temperature in °C]
 #   Value range: [min: 20, max: 1000]
-auto_shutdown_temp:50
+ps_auto_shutdown_temp:50
 
 
 #--------------------------------------------------------------------
@@ -620,25 +622,26 @@ auto_shutdown_temp:50
 #   3) Add M75 to "start_gcode" and M77 to "end_gcode" of the TFT (or your slicer).
 
 #### Default Filament Runout Sensor
-# Select the type of filament/runout sensor and its default enabled/disabled state.
+# Select the type of filament runout sensor and its default enabled/disabled state.
 #
 #   Options: [Normal Disabled: 0, Normal Enabled: 1, Smart Disabled: 2, Smart Enabled: 3]
 fil_runout:0
 
-#### Inverted Filament Runout Logic
+#### Inverted Filament Runout Sensor Logic
 # Invert the logic of the sensor.
 #   Options: [disable: 0, enable: 1]
-fil_runout_inverting:1
+fil_runout_inverted:1
 
-#### Filament Sensor Normal Close
+#### Filament Runout Sensor NC (Normal Close)
+# Invert the logic of the sensor.
 #   Options: [Normal Open: 0, Normal Close: 1]
 fil_runout_nc:1
 
-#### Filament Noise Threshold
+#### Filament Runout Noise Threshold
 # Pause print when filament runout is detected at least for this time period.
 #   Unit: [time in miliseconds]
 #   Value range: [min: 10, max: 1800]
-fil_noise_threshold:100
+fil_runout_noise_threshold:100
 
 #### Smart Filament Runout Detection
 # For use with an encoder disc that toggles runout pin as filament moves.
@@ -655,20 +658,20 @@ fil_runout_distance:7
 # Enable power loss recovery.
 # Disable to reduce the loss of SD card or U disk.
 #   Options: [disable: 0, enable: 1]
-pl_recovery_en:1
+plr_on:1
 
 #### Power Loss Recovery Homing
 # Home before power loss recovery.
 #   Options: [disable: 0, enable: 1]
-pl_recovery_home:0
+plr_home:0
 
-#### Power Loss Z Raise
+#### Power Loss Recovery Z Raise
 # Raise Z axis on resume (on power loss with UPS).
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
-pl_z_raise:10
+plr_z_raise:10
 
-#### BTT UPS Support
+#### BTT Mini UPS Support
 # Enable backup power/UPS to move Z axis on power loss.
 #   Options: [disable: 0, enable: 1]
 btt_mini_ups:0
