--- a/Copy to SD Card root directory to update/config.ini
+++ b/Copy to SD Card root directory to update/config.ini
@@ -365,7 +365,7 @@ ext_count:1
 fan_count:1
 
 #### Controller Fan Support
-# Enable/disable controller fan speed control for Idle and Active cooling if Marlin
+# Enable/disable controller fan speed control for Active and Idle cooling if Marlin
 # firmware supports controller fan (M710).
 #   Options: [disable: 0, enable: 1]
 controller_fan:0
@@ -386,11 +386,13 @@ max_temp:T0:275 T1:275 T2:275 T3:275 T4:275 T5:275 BED:150 CHAMBER:60
 min_temp:180
 
 #### Fan Maximum PWM Speed
-# Set minimum and maximum fan speed allowed by the printer.
-#   Format: [fan_max: F0:<max PWM> F1:<max PWM> F2:<max PWM> F3:<max PWM> F4:<max PWM> F5:<max PWM> CtL:<max PWM> CtI:<max PWM>]
+# Set minimum and maximum fan speed allowed by the printer for Cooling Fans & Controller Fan.
+# Cooling fans have index from F0 to F5.
+# Controller fan has index CtA and CtI (Active and Idle). It requires "controller_fan" is enabled.
+#   Format: [fan_max: F0:<max PWM> F1:<max PWM> F2:<max PWM> F3:<max PWM> F4:<max PWM> F5:<max PWM> CtA:<max PWM> CtI:<max PWM>]
 #   Unit: [PWM]
 #   Value range: [min: 25, max: 255]
-fan_max:F0:255 F1:255 F2:255 F3:255 F4:255 F5:255 CtL:255 CtI:255
+fan_max:F0:255 F1:255 F2:255 F3:255 F4:255 F5:255 CtA:255 CtI:255
 
 #### Machine Size / Build Area
 # The TFT will auto-detect the machine size (min and max) in Marlin firmware (requires
@@ -460,8 +462,8 @@ long_filename:2
 ## Pause Retract Length
 #   Format: [pause_retract: R<retract length> P<resume purge length>]
 #   Unit: [length in mm]
-#   Value range: [min: 0, max: 20]
-pause_retract:R15 P16
+#   Value range: [min: 0.0, max: 20.0]
+pause_retract:R15.0 P16.0
 
 ## Pause XY Position
 # NOTES:
@@ -470,14 +472,14 @@ pause_retract:R15 P16
 #
 #   Format: [pause_pos: X<position> Y<position>]
 #   Unit: [position in mm]
-#   Value range: [min: -2000, max: 2000]
-pause_pos:X10 Y10
+#   Value range: [min: -2000.0, max: 2000.0]
+pause_pos:X10.0 Y10.0
 
 ## Pause Z Raise
 # Raise Z axis by this value relative to the current layer height.
 #   Unit: [distance in mm]
-#   Value range: [min: 0, max: 2000]
-pause_z_raise:10
+#   Value range: [min: 0.0, max: 2000.0]
+pause_z_raise:10.0
 
 ## Pause Feed Rate
 # Feedrate to use when moving an axis when printing is paused.
@@ -501,14 +503,14 @@ level_edge_distance:20
 # For Probe/Home Offset and ABL in Mesh Tuner, raise Z axis by this relative position after reaching
 # a leveling point.
 #   Unit: [position in mm]
-#   Value range: [min: 0, max: 2000]
+#   Value range: [min: 0.0, max: 2000.0]
 level_z_pos:0.2
 
 ## Leveling Z Raise (Manual Leveling, Mesh Leveling)
 # Raise Z axis by this relative value before moving to another point during leveling/probing procedures.
 #   Unit: [distance in mm]
-#   Value range: [min: 0, max: 2000]
-level_z_raise:10
+#   Value range: [min: 0.0, max: 2000.0]
+level_z_raise:10.0
 
 ## Leveling Feed Rate (Manual Leveling, Mesh Leveling)
 # Feedrate to use when moving an axis during leveling/probing procedures.
@@ -556,8 +558,8 @@ probing_z_offset:1
 #   - It MUST BE a value <= 0 (e.g. -50) for a Delta printer to avoid crashing into the top of the tower.
 #
 #   Unit: [distance in mm]
-#   Value range: [min: -2000, max: 2000]
-probing_z_raise:20
+#   Value range: [min: -2000.0, max: 2000.0]
+probing_z_raise:20.0
 
 #### Z Steppers Auto-Alignment (ABL)
 # It allows to align multiple Z stepper motors using a bed probe by probing one position per stepper.
@@ -683,8 +685,8 @@ pl_recovery_home:0
 #### Power Loss Recovery Z Raise
 # Raise Z axis on resume (on power loss with UPS).
 #   Unit: [distance in mm]
-#   Value range: [min: 0, max: 2000]
-pl_recovery_z_raise:10
+#   Value range: [min: 0.0, max: 2000.0]
+pl_recovery_z_raise:10.0
 
 #### BTT Mini UPS Support
 # Enable backup power/UPS to move Z axis on power loss.
