--- a/platformio.ini
+++ b/platformio.ini
@@ -38,7 +38,7 @@ boards_dir   = buildroot/boards
 ;default_envs = MKS_TFT28_V1_0_ARTILLERY
 ;default_envs = BIGTREE_TFT35_V3_0
 ;default_envs = BIGTREE_TFT35_E3_V3_0
-default_envs = BIGTREE_TFT24_V1_1_P
+default_envs = BIGTREE_TFT24_V1_1
 
 ;Build all Targets
 ;default_envs = BIGTREE_TFT35_V1_0, BIGTREE_TFT35_V1_1, BIGTREE_TFT35_V1_2, BIGTREE_TFT35_V2_0, BIGTREE_GD_TFT35_V2_0, BIGTREE_TFT35_V3_0, BIGTREE_TFT35_E3_V3_0, BIGTREE_TFT35_B1_V3_0, BIGTREE_TFT43_V3_0, BIGTREE_TFT50_V3_0, BIGTREE_TFT70_V3_0, BIGTREE_TFT28_V1_0, BIGTREE_TFT28_V3_0, BIGTREE_TFT24_V1_1, BIGTREE_TFT24_V1_1_P, BIGTREE_GD_TFT24_V1_1, MKS_TFT32_V1_3, MKS_TFT32_V1_4, MKS_TFT32_V1_4_NOBL, MKS_TFT28_V3_0, MKS_TFT28_V4_0, MKS_TFT28_NEW_GENIUS
@@ -67,6 +67,7 @@ build_flags = -fmax-errors=5
   -ITFT/src/User/Hal/STM32_USB_OTG_Driver/inc
   -DSOFTWARE_VERSION=27.x
   -DSOFTWARE_VERSION_SHORT=27
+  -DPORTRAIT=  ; Global variable to query if Portrait Mode is used
   ${json.build_flags}
 extra_scripts = pre:buildroot/scripts/custom_filename.py
   post:buildroot/scripts/short_out_filename.py
@@ -341,17 +342,17 @@ build_flags   = ${stm32f10x.build_flags}
 #
 # BIGTREE TFT24 V1.1 Portrait Mode
 #
-[env:BIGTREE_TFT24_V1_1_P]
-extends       = env:BIGTREE_TFT24_V1_1
-build_flags   = ${stm32f10x.build_flags}
-  -DSTM32F10X_CL=
-  -DHSE_VALUE=8000000ul
-  -DVECT_TAB_FLASH=0x08006000
-  -DRAM_SIZE=64  ; Available RAM size in kbytes
-  -DHARDWARE="BIGTREE_TFT24_V1.1_P"
-  -DHARDWARE_SHORT="B24V11"
-  -DTFT24_V1_1=
-  -DPORTRAIT=  ; Global variable to query if Portrait Mode is used
+#[env:BIGTREE_TFT24_V1_1_P]
+#extends       = env:BIGTREE_TFT24_V1_1
+#build_flags   = ${stm32f10x.build_flags}
+#  -DSTM32F10X_CL=
+#  -DHSE_VALUE=8000000ul
+#  -DVECT_TAB_FLASH=0x08006000
+#  -DRAM_SIZE=64  ; Available RAM size in kbytes
+#  -DHARDWARE="BIGTREE_TFT24_V1.1_P"
+#  -DHARDWARE_SHORT="B24V11"
+#  -DTFT24_V1_1=
+#  -DPORTRAIT=  ; Global variable to query if Portrait Mode is used
 
 #
 # BIGTREE TFT24 V1.1
