--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -125,7 +125,7 @@ emulated_m109_m190:1
 file_comment_parsing:1
 
 #### Event LED
-# When printing from TFT SD / TFT U Disk, the TFT periodically set the printer's (neopixel) LED color
+# When printing from TFT SD / TFT U Disk, the TFT periodically sets the printer's (neopixel) LED color
 # and TFT's knob LED color, if any, according to the current nozzle and bed temperatures.
 #   Options: [disable: 0, enable: 1]
 event_led:1
